# project3

./: .gitignore  CLAUDE.md  README.md  app.py  compliment.py  fetch_weather.py  plot_weather.py  pyproject.toml  requirements.txt  tech_pack_assistant.py
.claude/hooks/: session-start.sh
tests/: test_fetch_weather.py  test_tech_pack_assistant.py
