[project]
name = "neew"
version = "0.1.0"
description = "Compare Los Angeles February weather over the last 10 years"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
python_executable = "/usr/local/bin/python3"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["plot_weather"]
disable_error_code = ["arg-type", "attr-defined", "operator"]
