[project]
name = "neew"
version = "0.1.0"
description = "Tech Pack Assistant MVP for fashion technical design workflows"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "requests", "requests.*", "matplotlib.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["plot_weather"]
disable_error_code = ["arg-type", "attr-defined", "operator"]
